Updating publication list

--- a/cv.tex
+++ b/cv.tex
@@ -146,15 +146,24 @@
       m{\dimexpr0.225\textwidth-2\tabcolsep}}
    \rowcolor{seaborn_blue}
    \multicolumn{2}{l}{\large\textcolor{seaborn_bg_grey_half}{\textbf{Publications}}}                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            \\
-   EBL and P.\,B.\,Blakie, \href{https://journals.aps.org/pra/pdf/10.1103/PhysRevA.90.053605}{\textit{Thermally activated local collapse of a flattened dipolar condensate}}. Phys. Rev.~A 90 (2014) 053605                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   & 7 citations; selected as an Editors' Suggestion \\
-   EBL, D.\,J.\,Cole, M.\,C.\,Payne, and D.\,D.\,O'Regan, \href{https://journals.aps.org/prb/abstract/10.1103/PhysRevB.98.235157}{\textit{Role of spin in the calculation of Hubbard U and Hund’s J parameters from first principles}}. Phys. Rev. B 98 (2018) 235157                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         & 20 citations                                    \\
-   C.\,J.\,Edgcombe, S.\,M.\,Masur, EBL, J.\,Whaley-Baldwin, and C.\,H.\,W.\,Barnes, \href{https://www.sciencedirect.com/science/article/pii/S0304399118302833}{\textit{Analysis of a capped carbon nanotube by linear-scaling density-functional theory}}. Ultramicroscopy 198 (2019) 26                                                                                                                                                                                                                                                                                                                                                                                                                                                                     & 7 citations                                     \\
-   M.\,A.\,al-Badri, EBL, A.\,Georges, D.\,J.\,Cole, and C.\,Weber, \href{https://www.nature.com/articles/s42005-019-0270-1}{\textit{Superexchange mechanism and quantum many body excitations in the archetypal di-Cu oxo-bridge}}. Comm. Phys. 3 (2020) 4                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   & 4 citations                                     \\
-   EBL, D.\,J.\,Cole, N.\,D.\,M.\,Hine and C.\,Weber, \href{https://pubs.acs.org/doi/10.1021/acs.jctc.0c00162}{\textit{ONETEP + TOSCAM: uniting dynamical mean field theory and linear-scaling density functional theory}}. JCTC 16 (2020) 4899                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               & 1 citation                                      \\
-   J.\,C.\,A.\ Prentice, J.\ Aarons, J.\,C.\ Womack, A.\,E.\,A.\ Allen, L.\ Andrinopoulos, L.\ Anton, R.\,A.\ Bell, A.\ Bhandari, G.\,A.\ Bramley, R.\,J.\ Charlton, R.\,J.\ Clements, D.\,J.\ Cole, G.\ Constantinescu, F.\ Corsetti, S.\,M-M.\ Dubois, K.\,K.\,B.\ Duff, J.\ María Escartín, A.\ Greco, Q.\ Hill, L.\,P.\ Lee, EBL, D.\,D.\ O’Regan, M.\,J.\,S.\ Phipps, L.\,E.\ Ratcliff, Á. Ruiz Serrano, E.\,W.\ Tait, G.\ Teobaldi, V.\ Vitale, N.\ Yeung, T.\,J.\ Zuehlsdorff, J.\ Dziedzic, P.\,D.\ Haynes, N.\,D.\,M.\ Hine, A.\,A.\ Mostofi, M.\,C.\ Payne, and C.-K.\ Skylaris, \href{https://aip.scitation.org/doi/full/10.1063/5.0004445}{\textit{The ONETEP linear-scaling density functional theory program}}. J. Chem. Phys. 52 (2020) 174111 & 24 citations                                    \\
-   S.\,M.\ Masur, EBL, and C.\,J.\ Edgcombe, \href{https://www.sciencedirect.com/science/article/pii/S036820481930221X}{\textit{Modelling a capped carbon nanotube by linear-scaling density-functional theory}}, J. Electron Spectrosc. Relat. Phenom. 241 (2020) 146896                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     &
+   R.\,De Gennaro, N.\,Colonna, EBL, and N.\,Marzari, \href{https://doi.org/10.1103/PhysRevB.106.035106}{\textit{Bloch's theorem in orbital-density-dependent functionals: Band structures from Koopmans spectral functionals}}. Phys. Rev. B 106 (2022)                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      & 1 citation                                      \\
+   % 
+   H.\,Lee, C.\,Weber, and EBL, \href{https://doi.org/10.1021/acs.jpclett.2c00680}{\textit{Many-body study of Iron (III)-bound human serum transferrin}}. J. Phys. Chem. Lett. 13 (2022)                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      &                                                 \\
+   % 
+   N.\,Colonna, R.\,De Gennaro, EBL, and N.\,Marzari, \href{https://arxiv.org/abs/2202.08155}{\textit{Koopmans spectral functionals in periodic-boundary conditions}} arXiv:2202.08155 (2021)                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 &                                                 \\
+   % 
+   R.\,Kobayashi, T\,P.\,M.\,Goumans, N.\,Ole Carstensen, T.\,M.\,Soini, N.\,Marzari, I.\,Timrov, S.\,Ponc\'e, EBL, C.\,J.\,Sewell, G.\,Pizzi, F.\,Ramirez, M.\,Bercx, S.\,P.\,. Huber, C.\,S.\,Adorf, and L.\,Talirz, \href{https://doi.org/10.1021/acs.jchemed.1c00655}{\textit{Virtual computational chemistry teaching laboratories – hands-on at a distance}} J. Chem. Educ. 98 (2021)                                                                                                                                                                                                                                                                                                                                                                   & 8 citations                                     \\
+   % 
+   EBL, D.\,J.\,Cole, N.\,D.\,M.\,Hine, M.\,C.\,Payne, and C.\,Weber, \href{https://doi.org/10.1021/acs.jctc.0c00162}{\textit{ONETEP + TOSCAM: uniting dynamical mean field theory and linear-scaling density functional theory}} J. Chem. Theory Comput. 16 (2020)                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           & 5 citations                                     \\
+   S.\,M.\ Masur, EBL, and C.\,J.\ Edgcombe, \href{https://www.sciencedirect.com/science/article/pii/S036820481930221X}{\textit{Modelling a capped carbon nanotube by linear-scaling density-functional theory}}, J. Electron Spectrosc. Relat. Phenom. 241 (2020) 146896                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     & 3 citations                                     \\
+   J.\,C.\,A.\ Prentice, J.\ Aarons, J.\,C.\ Womack, A.\,E.\,A.\ Allen, L.\ Andrinopoulos, L.\ Anton, R.\,A.\ Bell, A.\ Bhandari, G.\,A.\ Bramley, R.\,J.\ Charlton, R.\,J.\ Clements, D.\,J.\ Cole, G.\ Constantinescu, F.\ Corsetti, S.\,M-M.\ Dubois, K.\,K.\,B.\ Duff, J.\ María Escartín, A.\ Greco, Q.\ Hill, L.\,P.\ Lee, EBL, D.\,D.\ O’Regan, M.\,J.\,S.\ Phipps, L.\,E.\ Ratcliff, Á. Ruiz Serrano, E.\,W.\ Tait, G.\ Teobaldi, V.\ Vitale, N.\ Yeung, T.\,J.\ Zuehlsdorff, J.\ Dziedzic, P.\,D.\ Haynes, N.\,D.\,M.\ Hine, A.\,A.\ Mostofi, M.\,C.\ Payne, and C.-K.\ Skylaris, \href{https://aip.scitation.org/doi/full/10.1063/5.0004445}{\textit{The ONETEP linear-scaling density functional theory program}}. J. Chem. Phys. 52 (2020) 174111 & 73 citations                                    \\
+   M.\,A.\,al-Badri, EBL, A.\,Georges, D.\,J.\,Cole, and C.\,Weber, \href{https://www.nature.com/articles/s42005-019-0270-1}{\textit{Superexchange mechanism and quantum many body excitations in the archetypal di-Cu oxo-bridge}}. Comm. Phys. 3 (2020) 4                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   & 7 citations                                     \\
+   C.\,J.\,Edgcombe, S.\,M.\,Masur, EBL, J.\,Whaley-Baldwin, and C.\,H.\,W.\,Barnes, \href{https://www.sciencedirect.com/science/article/pii/S0304399118302833}{\textit{Analysis of a capped carbon nanotube by linear-scaling density-functional theory}}. Ultramicroscopy 198 (2019) 26                                                                                                                                                                                                                                                                                                                                                                                                                                                                     & 14 citations                                    \\
+   EBL, D.\,J.\,Cole, M.\,C.\,Payne, and D.\,D.\,O'Regan, \href{https://journals.aps.org/prb/abstract/10.1103/PhysRevB.98.235157}{\textit{Role of spin in the calculation of Hubbard U and Hund’s J parameters from first principles}}. Phys. Rev. B 98 (2018) 235157                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         & 33 citations                                    \\
+   EBL and P.\,B.\,Blakie, \href{https://journals.aps.org/pra/pdf/10.1103/PhysRevA.90.053605}{\textit{Thermally activated local collapse of a flattened dipolar condensate}}. Phys. Rev.~A 90 (2014) 053605                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   & 9 citations; selected as an Editors' Suggestion
 \end{tabularx}
 
+\newpage
 \begin{tabularx}{\textwidth}{
    m{\dimexpr0.10\textwidth-2\tabcolsep}%
    m{\dimexpr0.70\textwidth-2\tabcolsep}%
@@ -231,55 +240,57 @@
 %
 \begin{tabularx}{\textwidth}{l l l}
    \rowcolor{seaborn_blue}
-   \multicolumn{3}{l}{\textcolor{seaborn_bg_grey_half}{\textbf{Skills}}}                                                                                                                                                                                                                                                                                                        \\\noalign{\vskip-0.1pt}
+   \multicolumn{3}{l}{\textcolor{seaborn_bg_grey_half}{\textbf{Skills}}}                                                                                                                                                                                                                                                                                                   \\\noalign{\vskip-0.1pt}
    \rowcolor{seaborn_bg_grey}
-   \textbf{\textit{Programming}} &                                                                                                                                                                        &                                                                                                                                                                     \\\noalign{\vskip-0.1pt}
+   \textbf{\textit{Programming}} &                                                                                                                                                                        &                                                                                                                                                                \\\noalign{\vskip-0.1pt}
    \rowcolor{seaborn_bg_grey}
-   Used daily                    & Fortran, Python, Bash                                                                                                                                                  &                                                                                                                                                                     \\\noalign{\vskip-0.1pt}
+   Used daily                    & Fortran, Python, Bash                                                                                                                                                  &                                                                                                                                                                \\\noalign{\vskip-0.1pt}
    \rowcolor{seaborn_bg_grey}
-   Used monthly                  & MPI, OpenMP                                                                                                                                                            &                                                                                                                                                                     \\\noalign{\vskip-0.1pt}
+   Used monthly                  & MPI, OpenMP                                                                                                                                                            &                                                                                                                                                                \\\noalign{\vskip-0.1pt}
    \rowcolor{seaborn_bg_grey}
-   Some experience               & C++, MATLAB, CUDA                                                                                                                                                      &                                                                                                                                                                     \\\noalign{\vskip-0.1pt}
-   \multicolumn{3}{X}{\cellcolor{seaborn_bg_grey}I am a contributor to \href{https://www.onetep.org}{ONETEP}, a commercially available scientific DFT code, and a developer of TOSCAM, a publically available DMFT code}                                                                                                                                                        \\\noalign{\vskip-0.1pt}
-   \multicolumn{3}{X}{\cellcolor{seaborn_bg_grey}In 2017 I audited \href{https://www.cl.cam.ac.uk/teaching/1718/L42/}{\emph{Machine Learning and Algorithims for Data Mining}}, a master's course on machine learning run by the Department of Computer Science and Technology at the University of Cambridge.}                                                                 \\\noalign{\vskip-0.1pt}
-   \multicolumn{3}{X}{\cellcolor{seaborn_bg_grey}I participated in \href{https://hashcode.withgoogle.com/}{Google Hash Code 2018}. I sporadically compete on \href{https://projecteuler.net/}{Project Euler} and \href{https://www.codingame.com/home}{CodinGame}}                                                                                                              \\\noalign{\vskip-0.1pt}
-   \multicolumn{3}{X}{\cellcolor{seaborn_bg_grey_half}\textbf{\textit{Packages and Software}}}                                                                                                                                                                                                                                                                                  \\\noalign{\vskip-0.1pt}
+   Some experience               & C++, MATLAB, CUDA                                                                                                                                                      &                                                                                                                                                                \\\noalign{\vskip-0.1pt}
+   \multicolumn{3}{X}{\cellcolor{seaborn_bg_grey}I am a contributor to \href{https://www.onetep.org}{ONETEP}, a commercially available scientific DFT code, and a developer of TOSCAM, a publically available DMFT code}                                                                                                                                                   \\\noalign{\vskip-0.1pt}
+   \multicolumn{3}{X}{\cellcolor{seaborn_bg_grey}In 2017 I audited \href{https://www.cl.cam.ac.uk/teaching/1718/L42/}{\emph{Machine Learning and Algorithims for Data Mining}}, a master's course on machine learning run by the Department of Computer Science and Technology at the University of Cambridge.}                                                            \\\noalign{\vskip-0.1pt}
+   \multicolumn{3}{X}{\cellcolor{seaborn_bg_grey}I participated in \href{https://hashcode.withgoogle.com/}{Google Hash Code 2018}. I sporadically compete on \href{https://projecteuler.net/}{Project Euler} and \href{https://www.codingame.com/home}{CodinGame}}                                                                                                         \\\noalign{\vskip-0.1pt}
+   \multicolumn{3}{X}{\cellcolor{seaborn_bg_grey_half}\textbf{\textit{Packages and Software}}}                                                                                                                                                                                                                                                                             \\\noalign{\vskip-0.1pt}
    \rowcolor{seaborn_bg_grey_half}
-   Used daily                    & Quantum ESPRESSO, ASE, vim, \LaTeX, SLURM, git                                                                                                                         &                                                                                                                                                                     \\\noalign{\vskip-0.1pt}
+   Used daily                    & Quantum ESPRESSO, ASE, vim, \LaTeX, SLURM, git                                                                                                                         &                                                                                                                                                                \\\noalign{\vskip-0.1pt}
    \rowcolor{seaborn_bg_grey_half}
-   Used monthly                  & PyMol, VMD, ONETEP, TOSCAM,                                                                                                                                            &                                                                                                                                                                     \\\noalign{\vskip-0.1pt}
+   Used monthly                  & PyMol, VMD, ONETEP, TOSCAM,                                                                                                                                            &                                                                                                                                                                \\\noalign{\vskip-0.1pt}
    \rowcolor{seaborn_bg_grey_half}
-   Some experience               & CASTEP, Siesta, Maestro                                                                                                                                                &                                                                                                                                                                     \\\noalign{\vskip-0.1pt}
+   Some experience               & CASTEP, Siesta, Maestro                                                                                                                                                &                                                                                                                                                                \\\noalign{\vskip-0.1pt}
    \rowcolor{seaborn_bg_grey}
-   \textbf{\textit{Teaching}}    &                                                                                                                                                                        &                                                                                                                                                                     \\\noalign{\vskip-0.1pt}
+   \textbf{\textit{Teaching}}    &                                                                                                                                                                        &                                                                                                                                                                \\\noalign{\vskip-0.1pt}
    \rowcolor{seaborn_bg_grey}
-   2021
+   2021-22
                                  & \multicolumn{1}{m{0.5\textwidth}}{Lab demonstrator for master's course in atomistic and quantum simulation of materials}
-                                 & EPFL                                                                                                                                                                                                                                                                                                                                         \\
+                                 & EPFL                                                                                                                                                                                                                                                                                                                                    \\
    \noalign{\vskip-0.1pt} \rowcolor{seaborn_bg_grey}
    2017
                                  & \multicolumn{1}{m{0.5\textwidth}}{Supervised ten third-year students for thermal and statistical physics}
-                                 & University of Cambridge                                                                                                                                                                                                                                                                                                                      \\\noalign{\vskip-0.1pt}
+                                 & University of Cambridge                                                                                                                                                                                                                                                                                                                 \\\noalign{\vskip-0.1pt}
    \rowcolor{seaborn_bg_grey}
    2016
                                  & \multicolumn{1}{m{0.5\textwidth}}{Supervised nine second-year students for experimental methods, oscillations, waves, optics, quantum mechanics, and condensed matter}
-                                 & University of Cambridge                                                                                                                                                                                                                                                                                                                      \\\noalign{\vskip-0.1pt}
+                                 & University of Cambridge                                                                                                                                                                                                                                                                                                                 \\\noalign{\vskip-0.1pt}
    \rowcolor{seaborn_bg_grey}
    2015
                                  & \multicolumn{1}{m{0.5\textwidth}}{Supervised nine first-year students for physics}
-                                 & University of Cambridge                                                                                                                                                                                                                                                                                                                      \\\noalign{\vskip-0.1pt}
+                                 & University of Cambridge                                                                                                                                                                                                                                                                                                                 \\\noalign{\vskip-0.1pt}
    \rowcolor{seaborn_bg_grey}
    2013
                                  & \multicolumn{1}{m{0.5\textwidth}}{Lab demonstrator, university tutor, and private tutor for first-year biological physics}
-                                 & University of Otago                                                                                                                                                                                                                                                                                                                          \\\noalign{\vskip-0.1pt}
+                                 & University of Otago                                                                                                                                                                                                                                                                                                                     \\\noalign{\vskip-0.1pt}
    \rowcolor{seaborn_bg_grey_half}
-   \textbf{\textit{Mentoring}}   &                                                                                                                                                                        &                                                                                                                                                                     \\*\noalign{\vskip-0.1pt}
-   \multicolumn{3}{X}{\cellcolor{seaborn_bg_grey_half}During the course of my PhD I have provided support to two students.}                                                                                                                                                                                                                                                     \\*\noalign{\vskip-0.1pt}
-   \multicolumn{3}{X}{\cellcolor{seaborn_bg_grey_half}I have spent a significant amount of time with M.\,A.\,Al-Badri (Masters, and then PhD student from King's College London), teaching him about DMFT and working with him on DMFT calculations on hemocyanin. I have hosted him in Cambridge twice, and visited him at KCL periodically. A paper resulted from this work.} \\*\noalign{\vskip-0.1pt}
+   \textbf{\textit{Mentoring}}   &                                                                                                                                                                        &                                                                                                                                                                \\*\noalign{\vskip-0.1pt}
+   \multicolumn{3}{X}{\cellcolor{seaborn_bg_grey_half}During my postdoc I have supervised the Masters project and dissertation of Yannick Schubert.}                                                                                                                                                                                                                       \\*\noalign{\vskip-0.1pt}
+   \multicolumn{3}{X}{\cellcolor{seaborn_bg_grey_half}I also helped Hovan Lee (PhD student from King's College London) with his DMFT calculations on transferrin. A paper resulted from this work, for which I am the last author.}                                                                                                                                        \\*\noalign{\vskip-0.1pt}
+   \multicolumn{3}{X}{\cellcolor{seaborn_bg_grey_half}During the course of my PhD I provided support to two students.}                                                                                                                                                                                                                                                     \\*\noalign{\vskip-0.1pt}
+   \multicolumn{3}{X}{\cellcolor{seaborn_bg_grey_half}I spent a significant amount of time with M.\,A.\,Al-Badri (Masters, and then PhD student from King's College London), teaching him about DMFT and working with him on DMFT calculations on hemocyanin. I have hosted him in Cambridge twice, and visited him at KCL periodically. A paper resulted from this work.} \\*\noalign{\vskip-0.1pt}
 
-   \multicolumn{3}{X}{\cellcolor{seaborn_bg_grey_half}I have been the local port-of-call for S. Mansur (PhD student, Cambridge) for support running ONETEP calculations. This work has resulted in two publications.}                                                                                                                                                           \\\noalign{\vskip-0.1pt}
+   \multicolumn{3}{X}{\cellcolor{seaborn_bg_grey_half}I was the local port-of-call for S. Mansur (PhD student, Cambridge) for support running ONETEP calculations. This work has resulted in two publications.}                                                                                                                                                            \\\noalign{\vskip-0.1pt}
    \rowcolor{seaborn_bg_grey}
-   \textbf{\textit{Outreach}}    &                                                                                                                                                                        &                                                                                                                                                                     \\
+   \textbf{\textit{Outreach}}    &                                                                                                                                                                        &                                                                                                                                                                \\
    \rowcolor{seaborn_bg_grey}
    \multicolumn{3}{X}{\cellcolor{seaborn_bg_grey}I gave talks on computational physics to high school groups in the outreach event \emph{Physics at Work 2017} at the Cavendish Laboratory.}
 \end{tabularx}
